# twofloat

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  conanfile.py
docs/: Doxyfile.in
include/libtwofloat/: algebraic.hpp  algorithms.hpp  constants.hpp  limits.hpp  operators.hpp  string.hpp  trigonometric.hpp  twofloat.hpp
include/libtwofloat/archs/ipu/: ipu.hpp  traits.hpp
include/libtwofloat/arithmetics/: double-word-arithmetic.hpp  pair-arithmetic.hpp
test/: CMakeLists.txt  double-word-arithmetic.test.cpp  pair-arithmetic.test.cpp  trigonometric.test.cpp
